SERVER-72493 Require string when resolving module loader baseUrl